kubernetes/llm/components/searxng/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: llm
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/instance: searxng
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: searxng
